# Sora

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
doc/: AST.md  File Header.txt  Grammar.md  Roadmap.md  Specification.md
include/Sora/: CMakeLists.txt  EntryPoints.hpp
include/Sora/AST/: ASTAlignement.hpp  ASTContext.hpp  ASTNode.hpp  ASTScope.hpp  ASTScopeKinds.def  ASTVisitor.hpp  ASTWalker.hpp  Decl.hpp  DeclContext.hpp  DeclNodes.def  Expr.hpp  ExprNodes.def  Identifier.hpp  NameLookup.hpp  OperatorKinds.def  OperatorKinds.hpp  Pattern.hpp  PatternNodes.def  SourceFile.hpp  Stmt.hpp  StmtNodes.def  Type.hpp  TypeNodes.def  TypeRepr.hpp  TypeReprNodes.Def  TypeReprNodes.def  TypeVariableEnvironment.hpp  TypeVisitor.hpp  Types.hpp
include/Sora/Common/: DiagnosticConsumer.hpp  DiagnosticEngine.hpp  DiagnosticsAll.def  DiagnosticsCommon.def  DiagnosticsCommon.hpp  DiagnosticsDriver.def  DiagnosticsDriver.hpp  DiagnosticsLexer.hpp  DiagnosticsParser.def  DiagnosticsParser.hpp  InitLLVM.hpp  InlineBitfields.hpp  IntegerWidth.hpp  LLVM.hpp  SourceLoc.hpp  SourceManager.hpp
include/Sora/Diagnostics/: DiagnosticConsumer.hpp  DiagnosticEngine.hpp  DiagnosticsAll.def  DiagnosticsCommon.def  DiagnosticsCommon.hpp  DiagnosticsDriver.def  DiagnosticsDriver.hpp  DiagnosticsLexer.def  DiagnosticsLexer.hpp  DiagnosticsParser.def  DiagnosticsParser.hpp  DiagnosticsSema.def  DiagnosticsSema.hpp
include/Sora/Driver/: CMakeLists.txt  DiagnosticVerifier.hpp  Driver.hpp  Options.hpp  Options.td
include/Sora/IR/: CMakeLists.txt  Dialect.hpp  Ops.td  Types.hpp
include/Sora/Lexer/: Lexer.hpp  Token.hpp  TokenKinds.def
include/Sora/Parser/: Parser.hpp  ParserResult.hpp
include/Sora/SIR/: CMakeLists.txt  Dialect.hpp  Ops.td  Types.hpp
include/Sora/Sema/: Sema.hpp
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTNode.cpp  ASTNodeLoc.hpp  ASTScope.cpp  ASTVerifier.cpp  ASTWalker.cpp  CMakeLists.txt  Decl.cpp  Expr.cpp  Identifier.cpp  NameLookup.cpp  OperatorKinds.cpp  Pattern.cpp  SourceFile.cpp  Stmt.cpp  TypeRepr.cpp  Types.cpp
lib/Common/: CMakeLists.txt  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  IntegerWidth.cpp  Source.cpp
lib/Diagnostics/: CMakeLists.txt  DiagnosticConsumer.cpp  DiagnosticEngine.cpp
lib/Driver/: CMakeLists.txt  DiagnosticVerifier.cpp  Driver.cpp  Options.cpp
lib/IR/: CMakeLists.txt  ConstantFolding.cpp  Dialect.cpp  Types.cpp
lib/IRGen/: CMakeLists.txt  IRGen.cpp  IRGen.hpp  IRGenDecl.cpp  IRGenExpr.cpp  IRGenPattern.cpp  IRGenStmt.cpp  IRGenType.cpp
lib/Lexer/: Lexer.cpp
lib/Parser/: CMakeLists.txt  ParseDecl.cpp  ParseExpr.cpp  ParsePattern.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp
lib/SIR/: CMakeLists.txt  ConstantFolding.cpp  Dialect.cpp  Types.cpp
lib/SIRGen/: CMakeLists.txt  SIRGen.cpp  SIRGen.hpp  SIRGenDecl.cpp  SIRGenExpr.cpp  SIRGenPattern.cpp  SIRGenStmt.cpp  SIRGenType.cpp
lib/Sema/: CMakeLists.txt  ConstraintSystem.cpp  ConstraintSystem.hpp  Sema.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaPattern.cpp  SemaStmt.cpp  SemaType.cpp  TypeCheckDecl.cpp  TypeCheckExpr.cpp  TypeCheckPattern.cpp  TypeCheckStmt.cpp  TypeCheckType.cpp  TypeChecker.cpp  TypeChecker.hpp
tests/: lit.cfg  lit.cfg.py
tests/Driver/: cannot-open-file.sora  cannot-use-arg1-with-arg2.sora  lit.local.cfg  no-input.sora  unknown-arg.sora  verify.sora
tests/IR/: block-terminator.sir  ops.sir  types.sir
tests/IRGen/debug/: g.sora
tests/IRGen/decl/: let.sora
tests/IRGen/expr/: literals.sora  paren.sora  tuples.sora  unary.sora
tests/IRGen/pattern/: discard-pattern.sora  transparent-patterns.sora  tuple-pattern.sora
tests/IRGen/stmt/: free-blocks.sora
tests/IRGen/type/: types.sora
tests/Parser/decl/: decl-astdump.sora  parseFuncDecl.sora  parseLetDecl.sora  parseSourceFile.sora  parsed-decl-ast.sora
tests/Parser/expr/: expr-astdump.sora  parseAssignExpr.sora  parseBinaryExpr..sora  parseCastExpr.sora  parseConditionalExpr.sora  parsePostFixExpr.sora  parsePrefixExpr.sora  parsePrimaryExpr.sora  parseTupleExpr.sora  parsed-expr-ast.sora  todo.parseConditionalExpr.sora
tests/Parser/pattern/: parsePattern.sora  parsed-pattern-ast.sora  pattern-astdump.sora
tests/Parser/stmt/: parseBlockStmt.sora  parseIfStmt.sora  parseReturnStmt.sora  parseStmt.sora  parseWhileStmt.sora  stmt-astdump.sora
tests/Parser/typerepr/: arrayType.sora  arrayType.sora.disabled  maybeType.sora  parseMaybeType.sora  parseReferenceType.sora  parseTupleType.sora  parseType.sora  parsed-types-ast.sora  referenceAndPointerType.sora  referenceType.sora  tupleType.sora  types-astdump.sora
tests/SIR/: block-terminator.sir  ops.sir  types.sir
tests/SIR/folding/: BitNotOp.sir  DestructureTupleOp.sir
tests/SIRGen/debug/: g.sora
tests/SIRGen/decl/: func-default-return.sora  let.sora
tests/SIRGen/expr/: declref.sora  literals.sora  paren.sora  static_cast.sora  tuples.sora
tests/SIRGen/pattern/: discard-pattern.sora  transparent-patterns.sora  tuple-pattern.sora
tests/SIRGen/stmt/: free-blocks.sora  return.sora
tests/SIRGen/type/: types.sora
tests/Sema/code-examples/: factorial.sora
tests/Sema/decl/: decl-checked-ast.sora  redeclarations.sora  var-types.sora  var.sora
tests/Sema/expr/: binop.sora  callExpr.sora  casting.sora  conditionalExpr.sora  conditions.sora  discard.sora  expr-function-types-ast.sora  expr-types-ast.sora  (+10 more)
tools/CommandLine/: main.cpp
tools/sir-opt/: CMakeLists.txt  main.cpp
tools/sora-ir-opt/: CMakeLists.txt  main.cpp
tools/sorac/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt
unittests/src/: CMakeLists.txt  main.cpp
unittests/src/AST/: ASTContextTests.cpp  DeclContextTests.cpp  DeclTests.cpp  ExprTests.cpp  OperatorKindsTests.cpp  PatternTests.cpp  StmtTests.cpp  TypeReprTests.cpp  TypeTests.cpp
unittests/src/Common/: DiagnosticConsumerTests.cpp  DiagnosticEngineTests.cpp  SourceTests.cpp
unittests/src/Diagnostics/: DiagnosticConsumerTests.cpp  DiagnosticEngineTests.cpp
unittests/src/Lexer/: LexerTests.cpp  TokenTests.cpp
utils/: update_filecheck_test.py
(+24 files in other folders)
